# mnist-from-scratch

./: .gitignore  AGENTS.md  README.md  main.py  mnist-from-scratch.ipynb  mnist-using-pytorch.ipynb  pyproject.toml
learning/: CURRENT_STATE.md  LEARNER_MODEL.md  MISSION.md  README.md  ROADMAP.md  SOURCES.md
learning/journal/: README.md
learning/reference/: pytorch-basics.md  training-loop.md
notebooks/: 01-mnist-from-scratch.ipynb  02-pytorch-playground.ipynb
