[project]
name = "mnist-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
